--- a/src/NoTemplate.App/Views/Shared/_Layout.cshtml
+++ b/src/NoTemplate.App/Views/Shared/_Layout.cshtml
@@ -1,8 +1,31 @@
 ﻿<!DOCTYPE html>
 <html>
 
-    <head>
-        <title>@ViewData["Title"] - NoTemplateApp</title>
-        <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
-    </head>
+<head>
+    <title>@ViewData["Title"] - NoTemplateApp</title>
+
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
+    </environment>
+
+    <environment exclude="Development">
+        <link rel="stylesheet" href="~/css/site.min.css" />
+    </environment>
+</head>
+<body>
+    <header>
+        @RenderBody()
+    </header>
+
+    <environment include="Development">
+        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+        <script src="~/js/site.js"></script>
+    </environment>
+
+    <environment exclude="Development">
+        <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script src="~/js/site.min.js"></script>
+    </environment>
+</body>
 </html>
