playing with layouts

--- a/src/NoTemplate.App/Views/Home/index.cshtml
+++ b/src/NoTemplate.App/Views/Home/index.cshtml
@@ -1,1 +1,9 @@
-﻿Olá!
+﻿@{
+    // Here there's a configuraiton that defines if the view will have layout base
+    // Layout = string.Empty; -> that's defines the view will not have layout
+    //Layout = "_Layout.Teste" -> that's one defines the custom layout that the view will have;
+    // and if you don't want defines a layout and uses the default, just leave the empty block, or defines layout property with _Layout value.
+    Layout = string.Empty;
+}
+
+Olá!
